--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0"
+  }
 }
