--- a/recommendation-service/package.json
+++ b/recommendation-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recommendation_service",
+  "name": "recommendation-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
