--- a/admin-service/package.json
+++ b/admin-service/package.json
@@ -8,5 +8,11 @@
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  }
 }
