--- a/user-service/package.json
+++ b/user-service/package.json
@@ -8,5 +8,12 @@
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1"
+  }
 }
