--- a/delivery-service/package.json
+++ b/delivery-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "watchlist-service",
+  "name": "delivery-service",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
