--- a/movies-service/package.json
+++ b/movies-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":" nodemon src/index.js"
+    "start": " nodemon src/index.js"
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
