--- a/shopping-service/package.json
+++ b/shopping-service/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0"
   }
 }
