--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":" nodemon src/index.js"
+    "start": " nodemon src/index.js"
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
@@ -15,6 +15,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0",
-    "nodemon": "^3.0.1"
+    "nodemailer": "^6.9.7",
+    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemon": "^3.0.1",
+    "spdy": "^4.0.2"
   }
 }
