--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "spdy": "^4.0.2",
