--- a/customer-service/package.json
+++ b/customer-service/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": " nodemon src/index.js"
+    "start": "NODE_ENV=prod node src/index.js",
+    "dev": "NODE_ENV=dev nodemon src/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Olawuwo Abideen",
