--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=prod node src/index.js",
+    "start": "node src/index.js",
     "dev": "NODE_ENV=dev nodemon src/index.js",
     "test": "jest"
   },
