--- a/customer-service/Dockerfile
+++ b/customer-service/Dockerfile
@@ -1,6 +1,6 @@
 FROM node
 
-WORKDIR /app/admin-service
+WORKDIR /app/customer-service
 
 COPY package.json .
 
@@ -8,6 +8,6 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3001
+EXPOSE 3002
 
 CMD ["npm", "start"]
