--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jest": "^29.7.0",
     "mongoose": "^8.0.0",
     "nodemailer": "^6.9.7",
     "nodemailer-smtp-transport": "^2.7.4",
