--- a/shopping-service/package.json
+++ b/shopping-service/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "uuid": "^9.0.1",
