--- a/customer-service/package.json
+++ b/customer-service/package.json
@@ -12,6 +12,8 @@
   "author": "Olawuwo Abideen",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.87.0",
+    "@sentry/tracing": "^7.87.0",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
