--- a/delivery-service/package.json
+++ b/delivery-service/package.json
@@ -12,6 +12,8 @@
   "author": "Olawuwo Abideen",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^7.88.0",
+    "@sentry/tracing": "^7.88.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
