--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -12,6 +12,7 @@
   "author": "Olawuwo Abideen",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1565.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -20,6 +21,7 @@
     "nodemailer": "^6.9.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.0.1",
-    "spdy": "^4.0.2"
+    "spdy": "^4.0.2",
+    "twilio": "^4.22.0"
   }
 }
